--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -791,7 +791,7 @@
 </li>
 
 <li class="code-num">   <details> <summary >Box 24 – EI insurable earnings <span class="label label-info">Jeremiah</span></summary>
-                        <p id="bx_24">Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's EI premiums (or the self-employed fisher, barber and hairdresser, taxi driver and driver of other passenger‑carrying vehicles) that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
+                        <p id="bx_24">Report the <strong>total </strong>amount of insurable earnings using box 24 if you enter in <a href="#bx_10">box 10</a> that your employee worked in a province other than Quebec. This is the amount you used to calculate your employee's EI premiums that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
             <p>Report "0" if the employee or the self-employed worker had no insurable earnings and you did not report an amount in box 18.</p>
 		<p>In many situations, boxes 14 and 24 will be the same amount.</p>
 
@@ -834,7 +834,7 @@
 </li>
 
 <li class="code-num"><details> <summary >Box 26 – CPP/QPP pensionable earnings</summary>
- <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's CPP/QPP contributions (or the self-employed fisher, barber and hairdresser, taxi driver and driver of other passenger‑carrying vehicles) that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings for the year.</p>
+ <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's CPP/QPP contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings for the year.</p>
             <p>Report "0" if the employee or the self-employed worker had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
 		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
 
@@ -1162,7 +1162,8 @@
 
 <li class="code-num"><details><summary >Box 55 – Employee's PPIP premiums</summary>
             <p id="bx_55">If your employee worked in Quebec, report their provincial parental insurance plan (PPIP) premiums that you deducted.</p>
-  <h4>Specific situations</h4>
+ 
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd>Report the PPIP premiums you deducted from your employee who is registered, or entitled to be registered under the Indian Act for gross income earned in Quebec using box 55.</dd>
@@ -1177,26 +1178,22 @@
 </li>
 
 <li class="code-num"><details><summary >Box 56 – PPIP insurable earnings</summary>
-            <p id="bx_56">If your employee worked in Quebec, report the <strong>total </strong>amount used to calculate their PPIP premiums, up to the maximum.</p>
-            <p><strong>Do not </strong>report any amount in box 56 if:</p>
-            <ul>
-            <li>There are no insurable earnings </li>
-            <li>The insurable earnings are the same as the employment income in box 14 </li>
-            <li>The insurable earnings are more than the maximum for the year </li>
-            </ul>
+            <p id="bx_56">Report the <strong>total </strong> amount of insurable earnings using box 56 if you enter in <a href="#bx_10">box 10</a> that your employee worked in the province of Quebec.  This is the amount you used to calculate your employee's PPIP premiums that you reported using <a href="#bx_55">box 55</a>, up to the maximum insurable earnings for the year.</p>
 
+<p>Report "0" if the employee or the self-employed worker had no insurable earnings and you did not report an amount in box 55.</p>
+                   
   <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
-<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd>Report the self-employed income earned in Quebec from your employee who is registered, or entitled to be registered under the Indian Act using box 56.</dd>
+<dt>No PPIP premiums deductions required</dt>
+<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have PPIP premiums deducted using box 56. </p>
+</dd>
 
-<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
-<dd>Add situation</dd>
+<dt>Insurable earnings are the same as employment income</dt>
+<dd><p><strong>Do not </strong>report the insurable earnings using box 56 if the amount is the same as the employment income in box 14. </p></dd>
 
-<dt>Add title</dt>
-<dd>Add situation</dd>
 </dl>   
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></p>
             </details>
 </li>
 	
