--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -793,7 +793,7 @@
 </li>
 
 <li class="code-num">   <details> <summary >Box 24 – EI insurable earnings <span class="label label-info">Jeremiah</span></summary>
-                        <p id="bx_24">Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's EI premiums that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
+                        <p id="bx_24">Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's <abbr title="Employment insurance">EI</abbr> premiums that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
             <p>Report "0" if the employee or the self-employed worker had no insurable earnings and you did not report an amount in box 18.</p>
 		<p>In many situations, boxes 14 and 24 will be the same amount.</p>
 
@@ -801,7 +801,7 @@
     <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>No EI premiums deductions required</dt>
-<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have EI premiums deducted using box 24. </p>
+<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have <abbr title="Employment insurance">EI</abbr> premiums deducted using box 24. </p>
 
 <p>The unpaid portion of any earnings from insurable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities.</p>
 
@@ -823,7 +823,7 @@
             </dd>
 
 <dt>Correct deduction errors</dt>
-<dd><p>Report the correct EI insurable earnings in box 24. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for EI deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
+<dd><p>Report the correct <abbr title="Employment insurance">EI</abbr> insurable earnings in box 24. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for EI deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
     <p>Learn more:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
@@ -836,7 +836,7 @@
 </li>
 
 <li class="code-num"><details> <summary >Box 26 – CPP/QPP pensionable earnings</summary>
- <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's CPP/QPP contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings for the year.</p>
+ <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings for the year.</p>
             <p>Report "0" if the employee or the self-employed worker had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
 		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
 
@@ -884,8 +884,8 @@
     
     <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>No CPP/QPP contributions deductions required</dt>
-<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have CPP/QPP contributions deducted using box 26. </p>
+<dt>No <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions deductions required</dt>
+<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions deducted using box 26. </p>
 
 <p>The unpaid portion of any earnings from pensionable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities.</p>
 
@@ -907,7 +907,7 @@
             </dd>
 
 <dt>Correct deduction errors</dt>
-<dd><p>Report the correct CPP pensionable earnings in box 64. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for CPP deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
+<dd><p>Report the correct <abbr title="Canada Pension Plan">CPP</abbr> pensionable earnings in box 64. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for <abbr title="Canada Pension Plan">CPP</abbr> deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
     <p>Learn more:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
@@ -943,7 +943,7 @@
 <dl class="dl-horizontal">
 
 <dt>Box 29 - Employment codes</dt>
-<dd><p>Enter an "X" or a check mark under CPP/QPP if you are using <a href="#bx_29">box 29</a> with the employment code:</p>
+<dd><p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if you are using <a href="#bx_29">box 29</a> with the employment code:</p>
    <ul>
             <li>11 - Placement or employment agency worker </li>
             <li>12 - Taxi drivers or drivers of other passenger-carrying vehicles, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
@@ -1179,7 +1179,7 @@
 </li>
 
 <li class="code-num"><details><summary >Box 56 – PPIP insurable earnings</summary>
-            <p id="bx_56">Report the <strong>total </strong> amount of insurable earnings using box 56.  This is the amount you used to calculate your employee's PPIP premiums that you reported using <a href="#bx_55">box 55</a>, up to the maximum insurable earnings for the year.</p>
+            <p id="bx_56">Report the <strong>total </strong> amount of insurable earnings using box 56.  This is the amount you used to calculate your employee's <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums that you reported using <a href="#bx_55">box 55</a>, up to the maximum insurable earnings for the year.</p>
 
 <p>Report "0" if the employee or the self-employed worker had no insurable earnings and you did not report an amount in box 55.</p>
                    
@@ -1187,7 +1187,7 @@
 <dl class="dl-horizontal">
 
 <dt>No PPIP premiums deductions required</dt>
-<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have PPIP premiums deducted using box 56. </p>
+<dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums deducted using box 56. </p>
 </dd>
 
 <dt>Insurable earnings are the same as employment income</dt>
