--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -793,7 +793,12 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Contact us</h1>
 		 
-		
+		<p>[Placing this phone # here to remember:]</p>
+		  <details>
+		<summary class="mrgn-tp-md">If you need assistance with electronically filing this return</summary>
+		<p>You can call the Underused Housing Tax filing helpdesk toll free at 1-800-387-0720, or call collect at 613-221-3224.</p>
+	</details>
+	      
 	
     <dl class="dl-horizontal brdr-0">
       <dt>
