--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -794,7 +794,7 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Pay the tax</h1>
 			
-           		<p>If you are an <strong>affected owner</strong> of a residential property on <span class="nowrap">December 31</span>, you must file a return for the Underused Housing Tax. If your ownership of the residential property does <strong>not qualify for an exemption</strong>, you must also pay the tax for the calendar year.</p>
+           		<p>If you are an <strong>affected owner</strong>, and your ownership of the residential property does <strong>not qualify for an exemption</strong>, you must also pay the tax for the calendar year.</p>
 
 			
 
