--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -802,29 +802,37 @@ margin-left: 38px;
 
 
             </p><h2 id="2">How to pay</h2>
-			<p>Individuals and corporations may both pay the Underused Housing Tax using <strong>any one of the following</strong> methods:
+			<p>Individuals and corporations must pay all amounts owing in Canadian dollars using any of the following methods:</p>
+
+		 
 			</p><ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
   <li class="cnjnctn-col-60">
-    <p>Online payment </p>
+    <p>Pay online</p>
   </li>
   <li class="cnjnctn-col">
-    <p>Wire transfer or internationally issued credit card</p>
+    <p>Pay by wire transfer or internationally issued credit card</p>
   </li>
   <li class="cnjnctn-col">
-    <p>Cheque</p>
+    <p>Pay by cheque</p>
   </li>
 </ul>
-			   <p>Regardless of how you make your payment, all amounts must be paid in Canadian dollars.</p>
+			
 
 			
 			
 <h3>Pay online</h3>
-<p>If you are an <strong>individual</strong>, you may pay online <strong>after <span class="nowrap">Feb 6, 2023</span></strong>, using the following method:</p>
+<details>
+	<summary>If you are an individual</summary>
+	<p>If you are an <strong>individual</strong>, you may pay online using the following method:</p>
 <ul>
   <li><a href="/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li></ul>
-				<p>If you are an individual making an online payment, you may <strong>only</strong> use the “Underused Housing Tax” option (available after <span class="nowrap">February 6, 2023</span>).</p>
- 
-<p>If you are a <strong>corporation</strong>, you may pay online using <strong>any of the following </strong>methods:</p>
+				<p>If you are an individual making an online payment, you may <strong>only</strong> use the “Underused Housing Tax” option.</p>
+</details>
+
+
+<details>
+	<summary>If you are a corporation</summary>
+	<p>If you are a <strong>corporation</strong>, you may pay online using <strong>any of the following </strong>methods:</p>
 
 <ul>
   <li><a href="/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li>
@@ -833,6 +841,11 @@ margin-left: 38px;
 </ul>
 
 <p>If you are a corporation making an online payment, you may <strong>only</strong> use “amount owing” or “payment on filing” options.</p>
+</details>
+		 
+
+ 
+
 
 <h3>Pay by wire transfer or internationally issued credit card</h3>
 <p> If you are an individual or a corporation, you might not have a Canadian bank account. In that case, you may pay using a wire transfer or an internationally issued credit card.</p>
