--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1093,10 +1093,14 @@ html:lang(fr) .cnjnctn-or:before {
         </details>
       </div>
     </div>
+
+  <p>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may <mark>request a ruling or interpretation</mark> about how the tax applies to your specific situation.</p>
+
+	  
     <h2>Resources</h2>
-    <p>[Link to <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">tax notices</a> landing page instead of tech info]</p>
+    <p>[Link to <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">tax notices</a> landing page]</p>
     <p>[Link to <a href="https://laws-lois.justice.gc.ca/eng/acts/U-0.5/index.html">UHT Act</a>]</p>
-    <p><strong>[If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may request a ruling or interpretation about how the tax applies to your specific situation.]</strong></p>
+  
     
     <!-- <nav class="mrgn-bttm-lg mrgn-tp-lg">
             <h3 class="wb-inv">Document navigation</h3>
