--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -794,7 +794,7 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Pay the tax</h1>
 			
-           		<p>If you are an <strong>affected owner</strong>, and your ownership of the residential property does <strong>not qualify for an exemption</strong>, you must also pay the tax for the calendar year.</p>
+           		<p>If you are an <strong>affected owner</strong>, and your ownership of the residential property <strong>does not qualify for an exemption</strong>, you must also pay the tax for the calendar year.</p>
 
 			
 
@@ -802,7 +802,7 @@ margin-left: 38px;
 
 
             </p><h2 id="2">How to pay</h2>
-			<p>Individuals and corporations must pay all amounts owing in Canadian dollars using any of the following methods:</p>
+			<p>Individuals and corporations <strong>must</strong> pay all amounts owing in <strong>Canadian dollars</strong> using any of the following methods:</p>
 
 		 
 			</p><ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
@@ -821,26 +821,19 @@ margin-left: 38px;
 			
 			
 <h3>Pay online</h3>
-<details>
-	<summary>If you are an individual</summary>
-	<p>If you are an <strong>individual</strong>, you may pay online using the following method:</p>
+
+	<p>If you are an <strong>individual</strong>, you may pay using <a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a>. When making your payment, you may <strong>only</strong> use the "Underused Housing Tax" option.</p>
+
+
+	<p>If you are a <strong>corporation</strong>, you may pay using any of the following methods:</p>
 <ul>
-  <li><a href="/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li></ul>
-				<p>If you are an individual making an online payment, you may <strong>only</strong> use the “Underused Housing Tax” option.</p>
-</details>
-
-
-<details>
-	<summary>If you are a corporation</summary>
-	<p>If you are a <strong>corporation</strong>, you may pay online using <strong>any of the following </strong>methods:</p>
-
-<ul>
-  <li><a href="/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li>
+  <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/payment-save-time-pay-online.html">My Payment</a></li>
+	<li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-online-banking.html">Online banking</a></li>
   <li>Online banking with your Canadian financial institution</li>
-  <li><a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-online-banking.html">Online banking</a></li>
+  
 </ul>
 
-<p>If you are a corporation making an online payment, you may <strong>only</strong> use “amount owing” or “payment on filing” options.</p>
+<p>When making your payment, you may <strong>only</strong> use “amount owing” or “payment on filing” options.</p>
 </details>
 		 
 
