--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -723,10 +723,8 @@
 
 <dt>Province of employment is Quebec</dt>
 <dd> <p>Report amounts you deducted for your employee's share of the reduced <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>.</p>
-      <p>Learn more about the:</p>
-<ul><li> Reduced EI premiums: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></li>
-    <li>PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></li>
-</ul> </dd>
+      <p>Learn more: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></p>
+ </dd>
 </dl>
 
 <p>Learn more on how to determine if you need to deduct EI premiums from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
