--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -481,10 +481,10 @@
 </dd>
 
 <dt>Canadian Forces personnel and police officers</dt>
-<dd>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
+<dd><p>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
 
 <dt>Employment commissions</dt>
-<dd>Report the employment income from employment commissions you paid to your employee who sold property or negotiated contracts for you using code box 14 <strong>and</strong> <a href="#cd_42">code 42</a>.</p>
+<dd><p>Report the employment income from employment commissions you paid to your employee who sold property or negotiated contracts for you using code box 14 <strong>and</strong> <a href="#cd_42">code 42</a>.</p>
 <p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 14.</p>  
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>  
 </dd>
@@ -538,6 +538,7 @@
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
         </ul>
+<br>
   </dd>
 
 <dt>Under deductions (recovering)</dt>
@@ -545,6 +546,7 @@
             <p>Learn more if you under deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
+<br>
         </ul>
   </dd>
 <dt>Salary deferral arrangements</dt>
@@ -560,7 +562,7 @@
 
 
 <dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
-<dd> Report amounts you remitted for the the self-employed worker's share of <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
+<dd><p>Report amounts you remitted for the the self-employed worker's share of <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
 </dd>
 
 <dt>Province of employment outside Canada - Detached employee</dt>
@@ -574,7 +576,7 @@
 <li>1 slip showing the province of employment as Quebec, for the QPP contributions you deducted using box 17 and the employee's CPP/QPP pensionable earnings using box 26</li>
             </ul>      </dd>
 
-
+ </dl>
 <p>Learn more on how to determine if you need to deduct <abbr title="Canada Pension Plan">CPP</abbr> contributions from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
 
             </details>
@@ -639,7 +641,7 @@
 
 
 <dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
-<dd> Report amounts you remitted for the the self-employed worker's share of <abbr title="Quebec Pension Plan">QPP</abbr> contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
+<dd> <p>Report amounts you remitted for the the self-employed worker's share of <abbr title="Quebec Pension Plan">QPP</abbr> contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
 </dd>
 
 <dt>Contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
@@ -718,7 +720,7 @@
 
 
 <dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
-<dd> Report amounts you remitted for the the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+<dd> <p>Report amounts you remitted for the the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
 </dd>
 
 <dt>Province of employment is Quebec</dt>
@@ -751,7 +753,7 @@
 </dd>
 
 <dt><abbr title="Registered pension plan">RPP</abbr> contributions (past services)</dt>
-<dd>Report the contributions the employee made to buy past services for: </p>
+<dd><p>Report the contributions the employee made to buy past services for: </p>
 <ul>
             <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
             <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
@@ -1146,7 +1148,7 @@
 <dl class="dl-horizontal">
 
 <dt>Periods of leave or reduced services under a <abbr title="Multi-employer plan">MEP</abbr></dt>
-<dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr></strong> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
+<dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
 
 </dl>   
 
@@ -1227,7 +1229,7 @@
 <dt>Medical travel assistance </dt>
 <dd>Report the total amount of the medical travel benefit using code 32 <strong>and</strong> <a href="#cd_33">code 33</a> for the medical portion only.</dd>
 </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
 			</li>
 
@@ -1366,7 +1368,7 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p>Report <strong>only</strong> tax exempt non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 <strong>and</strong> the taxable amount using <a href="#cd_67">code 67</a>.</dd>
+<dd><p>Report <strong>only</strong> tax exempt non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 <strong>and</strong> the taxable amount using <a href="#cd_67">code 67</a>.</p></dd>
 <dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> </dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
