--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -933,26 +933,20 @@
             <h3 id="h_0_2">EI </h3>
            <p>Leave box 28 blank if you reported an amount greater than "0" in box 18 or 24. Enter an "X" or a check mark in the "EI" box only if you did not have to withhold EI premiums from the earnings for the <strong>entire </strong>reporting period. </p>
             <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cpp-ei-explained">CPP/EI Explained</a> </p>
-            <h3 id="h_0_3">PPIP (provincial parental insurance plan) </h3>
-            <p>Leave box 28 blank if you reported an amount in box 55 or 56. </p>
-            <p>Enter an "X" or a check mark in the "PPIP" box only if you did not have to withhold PPIP premiums from the earnings for the <strong>entire </strong>period of employment <strong>in the province of Quebec</strong>. </p>
-            <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
+           
 
 
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
+<dt>Box 55 - Employee's <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums </dt>
+<dd><p><strong>Do not</strong> use box 28 if you reported an amount using <a href="#bx_55">box 55</a>.</p>
+<p>Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if <strong>do not</strong> report any amount because you did not deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums using <a href="#bx_55">box 55</a>.</p>
+</dd>
+
 <dt>Box 29 - Employment codes</dt>
-<dd><p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if you are using <a href="#bx_29">box 29</a> with the employment code:</p>
-   <ul>
-            <li>11 - Placement or employment agency worker </li>
-            <li>12 - Taxi drivers or drivers of other passenger-carrying vehicles, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
-            <li>13 - Barbers or hairdressers, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
-            <li>14 - Withdrawal from a prescribed salary deferral arrangement plan</li>
-            <li>15 - Seasonal Agricultural Workers Program</li>
-            <li>16 - Detached employee &ndash; Social security agreement</li>
-            <li>17 - Self-employed fishing income, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
-            </ul>
+<dd>
+<p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if you enter an employment code using <a href="#bx_29">box 29</a>.</p>
 </dd></dl>
             </details>
 </li>
