--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -921,33 +921,34 @@
 		
 <li class="code-num"><details><summary >Box 28 – Exempt (CPP/QPP, EI, and PPIP)</summary>
             <h3 id="bx_28">CPP/QPP </h3>
-            <p>Leave box 28 blank if you:</p>
-            <ul>
-            <li>Reported a retiring allowance and no other type of income </li>
-            <li>Reported an amount greater than "0" in box 16, 17, or 26 </li>
-            <li>Reported "0" in box 26 and the employee gave you a copy of a completed Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
-            <li>Reported "0" in box 26 and the employee worked in one of the employment types listed as letters "C" to "O" on the back of Form CPT20, Election to Pay Canada Pension Plan Contributions </li>
-            </ul>
-            <p>Otherwise, enter an "X" or a check mark if you did not have to withhold CPP contributions from the earnings for the <strong>entire </strong>reporting period. </p>
-            <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cpp-ei-explained">CPP/EI Explained</a> </p>
-            <h3 id="h_0_2">EI </h3>
-           <p>Leave box 28 blank if you reported an amount greater than "0" in box 18 or 24. Enter an "X" or a check mark in the "EI" box only if you did not have to withhold EI premiums from the earnings for the <strong>entire </strong>reporting period. </p>
-            <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cpp-ei-explained">CPP/EI Explained</a> </p>
            
-
-
+               
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
-<dt>Box 55 - Employee's <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums </dt>
-<dd><p><strong>Do not</strong> use box 28 if you reported an amount using <a href="#bx_55">box 55</a>.</p>
-<p>Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if <strong>do not</strong> report any amount because you did not deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums using <a href="#bx_55">box 55</a>.</p>
+<dt><abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr></dt>
+<dd><p><strong>Do not</strong> use box 28 if you report an amount using <a href="#bx_26">box 26</a>.</p>
+
+<p><strong>Do not</strong> use box 28 if you report amounts using: <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong>strong> <a href="#cd_69">code 69</a> for a retiring allowance.</p>
+
+<p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if you <strong>do not</strong> report any amount because you did not deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period.</p>
 </dd>
 
-<dt>Box 29 - Employment codes</dt>
-<dd>
-<p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if you enter an employment code using <a href="#bx_29">box 29</a>.</p>
-</dd></dl>
+<dt>Employment codes</dt>
+<dd><p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if you enter an employment code using <a href="#bx_29">box 29</a>.</p>
+</dd>
+
+<dt><abbr title="Employment insurance">EI</abbr></dt>
+<dd><p><strong>Do not</strong> use box 28 if you report an amount using <a href="#bx_24">box 24</a>.</p>
+<p>Enter an "X" or a check mark under <abbr title="Employment insurance">EI</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Employment insurance">EI</abbr> premiums for the <strong>full</strong> reporting period.</p>
+</dd>
+
+<dt><abbr title="Provincial parental insurance plan">PPIP</abbr></dt>
+<dd><p><strong>Do not</strong> use box 28 if you reported an amount using <a href="#bx_55">box 55</a>.</p>
+<p>Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> report any amount because you did not deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
+</dd>
+</dl>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
             </details>
 </li>
 	
