--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -919,7 +919,7 @@
             </details>
            </li>
 		
-<li class="code-num"><details><summary >Box 28 – Exempt (CPP/QPP, EI, and PPIP)</summary>
+<li class="code-num"><details><summary >Box 28 – Exempt (CPP/QPP, EI, and PPIP) <span class="label label-info">Jeremiah</span></summary>
                     
                
  <h4>Specific situations</h4>
