--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -577,7 +577,7 @@
             </ul>      </dd>
 
  </dl>
-<p>Learn more on how to determine if you need to deduct <abbr title="Canada Pension Plan">CPP</abbr> contributions from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>         
 
             </details>
 </li>
@@ -652,7 +652,7 @@
             </ul>      </dd>
   </dl>
 
-<p>Learn more on how to determine if you need to deduct <abbr title="Quebec Pension Plan">QPP</abbr> contributions from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-pension-plan-contributions/">Québec Pension Plan Contributions | Revenu Québec</a></p>         
             </details>  
     </li>
 
@@ -729,7 +729,7 @@
  </dd>
 </dl>
 
-<p>Learn more on how to determine if you need to deduct EI premiums from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnei.html">About the deduction of Employment Insurance (EI) premiums</a></p>         
 
             </details>
 </li>
