--- a/payroll/calculate/benefit/retirement.html
+++ b/payroll/calculate/benefit/retirement.html
@@ -334,7 +334,8 @@
 
 <details><summary>Situation: Contributions to your employee's <strong>Registered pension plan (RPP)</strong></summary>
 <h4 id="rpp">Taxable situation</h4>
-<p>Add info</p>
+<p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/income-tax/reducing-remuneration-subject-income-tax/contributions-a-registered-pension-plan-rpp.html">Contributions to a registered pension plan (RPP)</a>.</p>
+
 <p>Continue to <a href="#h_2">Calculate the value of the benefit</a>.</p>
 </details>
 
