--- a/payroll/calculate/benefit/template-benefit.html
+++ b/payroll/calculate/benefit/template-benefit.html
@@ -145,6 +145,12 @@
 			<a href="child-expenses.html" class="hidden-xs hidden-sm">Child care expenses</a>
 			<a href="child-expenses.html#gc-document-nav" class="visible-xs visible-sm">Child care expenses</a>
       </li>
+
+  <li>
+			<a href="retirement.html" class="hidden-xs hidden-sm">Contributions to savings and pension plans </a>
+			<a href="retirement.html#gc-document-nav" class="visible-xs visible-sm">Contributions to savings and pension plans </a>
+      </li>
+
 	  <li>
 			<a href="counselling.html" class="hidden-xs hidden-sm">Counselling services and tax preparation</a>
 			<a href="counselling.html#gc-document-nav" class="visible-xs visible-sm">Counselling services and tax preparation</a>
@@ -231,11 +237,7 @@
 			<a href="recreational.html#gc-document-nav" class="visible-xs visible-sm">Recreational facilities and club dues</a>
       </li>
 	 
-	  <li>
-			<a href="retirement.html" class="hidden-xs hidden-sm">Savings and pension plans</a>
-			<a href="retirement.html#gc-document-nav" class="visible-xs visible-sm">Savings and pension plans</a>
-      </li>
-
+	
 	  <li>
 			<a href="security.html" class="hidden-xs hidden-sm">Security (stock) options</a>
 			<a href="security.html#gc-document-nav" class="visible-xs visible-sm">Security (stock) options</a>
