--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -364,7 +364,7 @@
                            <td>Plans</td>
                         </tr>	
 		<tr>
-                           <td> <p><a href="retirement.html">Savings and pension plans</a> <span class="label label-default">CVB - Rewrite in progress</span></p>
+                           <td> <p><a href="retirement.html">Contributions to savings and pension plans</a> <span class="label label-default">CVB - Rewrite in progress</span></p>
 			
 			<p>Includes:</p> 
 						   <ul>
