--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -670,7 +670,7 @@
 <dd>Report the amount using code 032 <strong>and</strong> <a href="#cd162">code 162</a></dd>
 </dl>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Savings and pension plans</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Contributions to savings and pension plans</a></p>
   
  </details> 
 </li>
@@ -964,7 +964,7 @@
   <p  id="cd134">Report the amount of the taxable benefit you paid during the exempt period to a beneficiary who is a resident of Canada using code 134.</p>
 
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html#tfsa">Savings and pension plans</a>.</p> 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html#tfsa">Contributions to savings and pension plans</a>.</p> 
  </details> 
 </li>
 
