--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -758,7 +758,7 @@
             <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
             <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
             </ul>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Savings and pension plans</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Contributions to savings and pension plans</a></p>
 
 </dd>
 
@@ -789,6 +789,8 @@
 
             <p><strong>Do not </strong>report any amount in box 22 if you did not deduct tax.</p>
             <p><strong>Do not </strong>include any amount you withheld under the authority of a garnishee or a requirement to pay that applies to the employee's previously assessed tax arrears.</p>
+
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnit.html">About the deduction of income tax</a>
             </details>
 </li>
 
