--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
@@ -117,8 +117,8 @@
 </div>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Get the T661 expenditures claim form</h1>
-<h2>Use form T661 to report expenditures</h2>
+<h1 property="name" id="wb-cont" class="gc-thickline">Report expenditures with form T661</h1>
+<h2>Get the T661 expenditures claim form</h2>
 <p>To report their expenditures, corporations, individuals, trusts, and partnerships must first  calculate how much they spent on a SR&amp;ED project during the tax year.</p>
              
 <ul class="fa-ul">   
