--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -736,7 +736,7 @@
 
 
 <li class="code-num">  <details><summary >Box 20 – RPP contributions</summary>
-<p id="bx_20">Report the total amount the employee contributed to a registered pension plan (RPP). Include instalment interest (for example, interest charged to buy back pensionable service). </p>
+<p id="bx_20">Report the total amount the employee contributed to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>). Include instalment interest (for example, interest charged to buy back pensionable service). </p>
 
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -748,8 +748,17 @@
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
-<p>If you pay taxable or partly tax-exempt employment income, you must prorate the RPP contribution and report this amount using code box 20.</p>
-<p>Give your employee proof of the amounts of RPP contributions for all tax-exempt income.</p>
+<p>If you pay taxable or partly tax-exempt employment income, you must prorate the <abbr title="registered pension plan">RPP</abbr> contribution and report this amount using code box 20.</p>
+<p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income.</p>
+</dd>
+
+<dt><abbr title="Registered retirement savings plan">RRSP</abbr> contributions</dt>
+<dd><p><strong>Do not</strong> report contributions you made to your employee's <abbr title="Registered retirement savings plan">RRSP</abbr> using box 20, use <a href="#cd_40">code 40</a> to report the total value of the benefit.</p>
+</dd>
+
+<dt><abbr title="Retirement compensation arrangement">RCA</abbr> contributions</dt>
+<dd><p>Report an amount if you deducted <abbr title="Retirement compensation arrangement">RCA</abbr> from your employee's income. </p>
+<p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
 </dd>
 
 <dt><abbr title="Registered pension plan">RPP</abbr> contributions (past services)</dt>
@@ -758,27 +767,12 @@
             <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
             <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
             </ul>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Contributions to savings and pension plans</a></p>
 
 </dd>
-
-<dt>Add title</dt>
-<dd>Add situation</dd>
 </dl>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Contributions to savings and pension plans</a></p>
 
-            <p><strong>Do not </strong>report these amounts in box 20:</p>
-            <ul>
-            <li>Amounts transferred directly to an RPP from an employee's registered retirement savings plan (RRSP) </li>
-            <li>Amounts you contributed to your employee's RRSP </li>
-            </ul>
-            <p>If your employee is an Indian with tax-exempt employment income, see: <a href="#indian1">Indian employees</a>.</p>
-            <h3 id="h_20resp1">RRSP contributions</h3>
-            <p>Your RRSP contribution is a taxable benefit to the employee. Enter code 40 in "Other information" and the corresponding amount in the box. </p>
-            <p>Report this amount in box 14.</p>
-            <p>If you have a group RRSP for your employees, the trustee will send the official receipts for tax purposes to you or to your employees. If the trustee sends the receipts directly to you, give these copies to the employees. The receipts will show the employee and employer contribution amounts.</p>
-            <h3 id="h_20resp2">Retirement compensation arrangement contributions</h3>
-            <p>Enter any deductible retirement compensation arrangement (RCA) contributions you withheld from your employee's income. </p>
-            <p><strong>Do not </strong>include amounts that are not deductible. If the amount in box 20 includes RPP contributions and deductible RCA contributions, attach a letter informing the employee of the amounts.</p>
+                                  
                        </details>	    
 		    </li>
 
